# bolt-python-search-template

./: .gitignore  AGENTS.md  README.md  app.py  manifest.json  pyproject.toml  pyproject.toml.flat-slack-cli-hooks  pyproject.toml.no-slack-cli-hooks  pyproject.toml.with-slack-cli-hooks  requirements.txt  requirements.txt.with-slack-cli-hooks
.claude/: settings.json
.github/workflows/: lint.yml  tests.yml
.slack/: hooks.json
listeners/: __init__.py  filters.py  sample_data_fetcher.py  sample_data_service.py
listeners/events/: __init__.py  entity_details_requested.py
listeners/functions/: __init__.py  filters.py  search.py
tests/: __init__.py
tests/listeners/: test_sample_data_service.py
tests/listeners/events/: test_entity_details_requested.py
tests/listeners/functions/: test_filters.py  test_search.py
